@@ -34,28 +34,15 @@
  */
 
 /*
- * @test id=ZSinglegen
+ * @test id=Z
  * @bug 8273456
  * @summary Test that ttyLock is ranked above StackWatermark_lock
- * @requires !vm.graal.enabled & vm.gc.ZSinglegen
+ * @requires !vm.graal.enabled & vm.gc.Z
  * @run main/othervm -XX:-BackgroundCompilation -Xmx128M -XX:+IgnoreUnrecognizedVMOptions -XX:+VerifyStack
  *      -XX:CompileCommand=exclude,compiler.uncommontrap.TestDeoptOOM::main
  *      -XX:CompileCommand=exclude,compiler.uncommontrap.TestDeoptOOM::m9_1
  *      -XX:+UnlockDiagnosticVMOptions
- *      -XX:+UseZGC -XX:-ZGenerational -XX:+LogCompilation -XX:+PrintDeoptimizationDetails -XX:+TraceDeoptimization -XX:+Verbose
- *      compiler.uncommontrap.TestDeoptOOM
- */
-
-/*
- * @test id=ZGenerational
- * @bug 8273456
- * @summary Test that ttyLock is ranked above StackWatermark_lock
- * @requires !vm.graal.enabled & vm.gc.ZGenerational
- * @run main/othervm -XX:-BackgroundCompilation -Xmx128M -XX:+IgnoreUnrecognizedVMOptions -XX:+VerifyStack
- *      -XX:CompileCommand=exclude,compiler.uncommontrap.TestDeoptOOM::main
- *      -XX:CompileCommand=exclude,compiler.uncommontrap.TestDeoptOOM::m9_1
- *      -XX:+UnlockDiagnosticVMOptions
- *      -XX:+UseZGC -XX:+ZGenerational -XX:+LogCompilation -XX:+PrintDeoptimizationDetails -XX:+TraceDeoptimization -XX:+Verbose
+ *      -XX:+UseZGC -XX:+LogCompilation -XX:+PrintDeoptimizationDetails -XX:+TraceDeoptimization -XX:+Verbose
  *      compiler.uncommontrap.TestDeoptOOM
  */
 
